@@ -2,6 +2,7 @@ Revision history for URI
 
 {{$NEXT}}
     - Remove Authority section from dist.ini (GH#86) (Olaf Alders)
+    - Make URI::mailto parse subaddresses with + sign correctly (GH#89) (Julien Fiegehenn)
 
 5.09      2021-03-03 15:16:47Z
     - Update Business::ISBN version requirements (GH#85) (brian d foy and Olaf
